# conformal-policy-control

./: .gitignore  .pre-commit-config.yaml  AcceptRejectSampling_InterpolationPlots.ipynb  CLAUDE.md  GCRC_synthetic_nonmonotonic_losses_Fig2.ipynb  LICENSE  README.md  compute_likelihoods_one_model_all_data.py  compute_liks_all_models_and_cal_data.py  compute_liks_all_models_one_target.py  conformal_policy_control.py  contrastive_generation.py  dpo.py  file_handler.py  finetune_ehrlich.py  finetune_utils.py  icml2025.sty  initial_generation.py  iterative_generation.py  iterative_generation2.py  main.tex  marge.py  modal_runner.py  model_client.py  pref_tuning_trainer.py  pyproject.toml  references.bib  run_pipeline.py  run_pipeline_20250929.py  run_pipeline_constrain_vs_init.py  score.py  score2.py  scratch.tex  seq2seq_sft_trainer.py  slurm_utils.py  sweep_comparison.json  sweep_data.json  sweep_data_unconstrained.json
QA_expts/: plot_medical_QA_results.ipynb  run_gcrc_expts.py  run_gcrc_expts.sh  utils.py
analysis/: extract_sweep_data.py  plot_sweep.py  tag_sweep_dirs.py
config/: compute_liks_all_models_and_cal_data.yaml  contrastive_generation.yaml  initial_generation.yaml  iterative_generation.yaml  pipeline_dpo_f2.yaml  pipeline_marge_f2.yaml  pipeline_sft_f2.yaml  pipeline_smaller_pythia.yaml  pipeline_smaller_pythia_cdt.yaml  pipeline_smaller_pythia_cdt2.yaml  pipeline_smaller_pythia_cdt2_moreTraining.yaml  pipeline_smaller_pythia_cdt2_noCPC.yaml  pipeline_smaller_pythia_cdt_20251114.yaml  score.yaml  (+5 more)
cpc_llm/: .env.slurm.example  CLAUDE.md  pyproject.toml
cpc_llm/config/: compute_liks_all_models_and_cal_data.yaml  cpc_llm.yaml  cpc_llm_20260220.yaml  dataset_edit_pairs.yaml  evol_dataset_gen.yaml  iterative_generation.yaml  pipeline_dpo_f2.yaml  pipeline_marge_f2.yaml  pipeline_sanity_check_marge.yaml  pipeline_sanity_check_no_s3.yaml  pipeline_sft_f2.yaml  pipeline_smaller_pythia_cdt2.yaml  pipeline_smaller_pythia_cdt2_moreTraining.yaml  pipeline_smaller_pythia_cdt_20260211_smaller.yaml  pipeline_smaller_pythia_cdt_og.yaml  score.yaml  score2.yaml  smoke.yaml
cpc_llm/config/env/: genentech.yaml  modal.yaml
cpc_llm/config/finetune/: pythia-2.8b.yaml  pythia-2.8b_edit_pairs.yaml
cpc_llm/config/old_configs/: pipeline_smaller_pythia.yaml  pipeline_smaller_pythia_cdt.yaml
cpc_llm/config/optimizer/: discrete_evolution.yaml
cpc_llm/config/pref_tuning/: pythia-2.8b-dpo.yaml  pythia-2.8b-marge.yaml
cpc_llm/config/test_function/: ehrlich.yaml
cpc_llm/src/cpc_llm/: __init__.py  data_contracts.py  main.py  metrics.py
cpc_llm/src/cpc_llm/calibrate/: CLAUDE.md  __init__.py  cpc_search.py  grid.py  normalization.py  process_likelihoods.py
cpc_llm/src/cpc_llm/core/: CLAUDE.md  __init__.py  compute_likelihoods_one_model_all_data.py  compute_liks_all_models_one_target.py  likelihoods.py  model_client.py  model_client_test.py  model_loading.py  score.py  score2.py
cpc_llm/src/cpc_llm/data/: CLAUDE.md  __init__.py  combine_and_split.py  select.py  synthetic_dataset_formatter.py  synthetic_dataset_formatter_test.py  synthetic_dataset_generator.py  synthetic_dataset_lib.py  synthetic_dataset_lib_test.py
cpc_llm/src/cpc_llm/infer/: CLAUDE.md  __init__.py  generation_utils.py  iterative_generation2.py  rejection_sampling.py
cpc_llm/src/cpc_llm/infrastructure/: CLAUDE.md  __init__.py  file_handler.py  orchestration.py  process_utils.py  retry.py  slurm_utils.py
cpc_llm/src/cpc_llm/test_functions/: CLAUDE.md  __init__.py  ehrlich_fn_difficulty.py  finetune_ehrlich.py  finetune_utils.py
cpc_llm/src/cpc_llm/train/: CLAUDE.md  __init__.py  data_collators.py  dpo.py  marge.py  marge_trainer.py  pref_tuning_trainer.py  seq2seq_sft_trainer.py
(+67 files in other folders)
